--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,31 @@
+# version: 2.1
+# orbs:
+#   node: circleci/node@3.0.0
+# workflows:
+#   node-tests:
+#     jobs:
+#       - node/test
+
 version: 2.1
-orbs:
-  node: circleci/node@3.0.0
-workflows:
-  node-tests:
-    jobs:
-      - node/test
+  jobs:
+    build:
+      docker:
+        - image: circleci/node:12.18.1
+      working_directory: ~/repo
+      steps:
+        - checkout
+        - run:
+            name: Show current branch
+            command: echo ${CURRENT_BRANCH}
+        - restore_cache:
+            key:
+              - app-{{checksum "package.json"}}
+              - app-
+        - run:
+            name: Install dependencies
+            command: npm install
+        - save_cache:
+            paths:
+              - node_modules
+            key: app-{{checksum "package.json"}}
+
