--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,3 +29,40 @@ version: 2.1
               - node_modules
             key: app-{{checksum "package.json"}}
 
+  deploy-toaws-s3:
+    docker:
+      - image: circleci:node:12.18.1
+    working_directory: ~/repo
+    steps:
+        - checkout
+        - run:
+            name: Show current branch
+            command: echo ${CURRENT_BRANCH}
+        - run:
+            name: Install AWS CLI
+            working_directory: /
+            command: |
+              sudo apt-get -y -qq update
+              sudo apt-get install -y awscli
+              sudo apt-get install -y python-pip python-dev build-essential 
+        - run:
+            name: Build Project
+            command: |
+              npm install
+              npm run build
+              cd build
+              zip ../build.zip -r * .[^.]*
+              echo "Build successful"
+        - run:
+            name: Deploy to AWS S3
+            command: | 
+              if ["${CURRENT_BRANCH}" == "master"]
+              then
+                aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_PRODUCTION_BUCKET} --delete
+              elif ["${CURRENT_BRANCH}" == "staging"] 
+              then
+                aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_STAGING_BUCKET} --delete
+              else
+                aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_DEV_BUCKET} --delete
+              fi
+
