--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,27 +7,27 @@
 #       - node/test
 
 version: 2.1
-  jobs:
-    build:
-      docker:
-        - image: circleci/node:12.18.1
-      working_directory: ~/repo
-      steps:
-        - checkout
-        - run:
-            name: Show current branch
-            command: echo ${CURRENT_BRANCH}
-        - restore_cache:
-            key:
-              - app-{{checksum "package.json"}}
-              - app-
-        - run:
-            name: Install dependencies
-            command: npm install
-        - save_cache:
-            paths:
-              - node_modules
-            key: app-{{checksum "package.json"}}
+jobs:
+  build:
+    docker:
+      - image: circleci/node:12.18.1
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - run:
+          name: Show current branch
+          command: echo ${CURRENT_BRANCH}
+      - restore_cache:
+          keys:
+            - app-{{checksum "package.json"}}
+            - app-
+      - run:
+          name: Install dependencies
+          command: npm install
+      - save_cache:
+          paths:
+            - node_modules
+          key: app-{{checksum "package.json"}}
 
 deploy-to-aws-s3:
   docker:
