--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "lint":"eslint 'src/**/*..js'",
+    "lint": "eslint 'src/**/*.js*'",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,6 +34,11 @@
   },
   "devDependencies": {
     "eslint": "^7.12.1",
-    "eslint-config-standard": "^16.0.1"
+    "eslint-config-standard": "^16.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-standard": "^4.0.2"
   }
 }
