disable linting & prettier

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,25 +58,25 @@ jobs:
       - *install-dependencies
       - *save-cache
 
-  linting:
-    executor: app-executor
-    steps:
-      - checkout
-      - *show-current-branch-name
-      - *restore-cache
-      - run:
-          name: Run linting
-          command: npm run lint
+  # linting:
+  #   executor: app-executor
+  #   steps:
+  #     - checkout
+  #     - *show-current-branch-name
+  #     - *restore-cache
+  #     - run:
+  #         name: Run linting
+  #         command: npm run lint
 
-  prettier:
-    executor: app-executor
-    steps:
-      - checkout
-      - *show-current-branch-name
-      - *restore-cache
-      - run:
-          name: Run prettier check
-          command: npm run prettier:check
+  # prettier:
+  #   executor: app-executor
+  #   steps:
+  #     - checkout
+  #     - *show-current-branch-name
+  #     - *restore-cache
+  #     - run:
+  #         name: Run prettier check
+  #         command: npm run prettier:check
 
   unit-test:
     executor: app-executor
@@ -142,28 +142,28 @@ workflows:
   build_and_deploy:
     jobs:
       - build
-      - linting:
-          requires:
-            - build
-          filters:
-            branches:
-              only:
-                - develop
-                - staging
-                - master
-      - prettier:
-          requires:
-            - build
-          filters:
-            branches:
-              only:
-                - develop
-                - staging
-                - master
+      # - linting:
+      #     requires:
+      #       - build
+      #     filters:
+      #       branches:
+      #         only:
+      #           - develop
+      #           - staging
+      #           - master
+      # - prettier:
+      #     requires:
+      #       - build
+      #     filters:
+      #       branches:
+      #         only:
+      #           - develop
+      #           - staging
+      #           - master
       - unit-test:
-          requires:
-            - linting
-            - prettier
+          # requires:
+          #   - linting
+          #   - prettier
           filters:
             branches:
               only:
